@@ -48,14 +48,14 @@ setmapflag "gl_knt01.gat",mf_clouds;
 setmapflag "gl_knt02.gat",mf_clouds;
 setmapflag "gl_step.gat",mf_clouds;
 setmapflag "glast_01.gat",mf_clouds;
-setmapflag "hunter_1-1.gat",mf_clouds;
-setmapflag "hunter_2-1.gat",mf_clouds;
-setmapflag "hunter_3-1.gat",mf_clouds;
+//setmapflag "hunter_1-1.gat",mf_clouds;
+//setmapflag "hunter_2-1.gat",mf_clouds;
+//setmapflag "hunter_3-1.gat",mf_clouds;
 setmapflag "izlude.gat",mf_clouds;
 setmapflag "job_thief1.gat",mf_clouds;
-setmapflag "knight_1-1.gat",mf_clouds;
-setmapflag "knight_2-1.gat",mf_clouds;
-setmapflag "knight_3-1.gat",mf_clouds;
+//setmapflag "knight_1-1.gat",mf_clouds;
+//setmapflag "knight_2-1.gat",mf_clouds;
+//setmapflag "knight_3-1.gat",mf_clouds;
 setmapflag "mjolnir_01.gat",mf_clouds;
 setmapflag "mjolnir_02.gat",mf_clouds;
 setmapflag "mjolnir_03.gat",mf_clouds;
@@ -112,9 +112,9 @@ setmapflag "pay_fild08.gat",mf_clouds;
 setmapflag "pay_fild09.gat",mf_clouds;
 setmapflag "pay_fild10.gat",mf_clouds;
 setmapflag "pay_fild11.gat",mf_clouds;
-setmapflag "priest_1-1.gat",mf_clouds;
-setmapflag "priest_2-1.gat",mf_clouds;
-setmapflag "priest_3-1.gat",mf_clouds;
+//setmapflag "priest_1-1.gat",mf_clouds;
+//setmapflag "priest_2-1.gat",mf_clouds;
+//setmapflag "priest_3-1.gat",mf_clouds;
 setmapflag "prontera.gat",mf_clouds;
 setmapflag "prt_are01.gat",mf_clouds;
 setmapflag "prt_fild00.gat",mf_clouds;
