@@ -34,6 +34,9 @@ KarLaeda
 Date		Added
 ======
 10/24
+	* Updated Novie Training Grounds: typos, bugs, removed extra maps, duplicates [Lupus]
+	- Removed some unused job-quest map aliases to free some RAM. Thanks to theultramage for pointing it out.
+	!!!WARNING!!! Wipe your memo db. Map indexes have been shifted.
 	* Added official Gonryun Power Arena [KarLaeda]
 	* Removed 2nd entrance warp to Novice Geffen Castle [Lupus]
 	- minor fixes in Novice Exchanger
